<resources>
    <string name="app_name">ClearPath</string>
    <string name="search">Search your tasks</string>
    <string name="enter_task_title">Enter task title</string>
    <string name="enter_deadline">Enter deadline (YYYY/MM/DD)</string>
    <string name="enter_description">Enter description</string>
    <string name="task_title">Task Title</string>
    <string name="task_deadline_placeholder">Deadline: (YYYY/MM/DD)</string>
    <string name="task_description_placeholder">Task description goes here</string>
    <string name="save">Save</string>
    <string name="save_task">Save task</string>
    <string name="back">Back</string>
    <string name="go_back_without_saving">Go back without saving</string>
    <string name="add_task">Add task</string>
    <string name="update_task">Update Task</string>
    <string name="view_completed_tasks">View Completed Tasks</string>
    <string name="view_ongoing_tasks">View Ongoing Tasks</string>
    <string name="deadline_task_card">Deadline: %1$s</string>
    <string name="filter_by_color">Filter by color</string>
    <string name="task_image">Enter Image</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="remove_image">Remove Image</string>
    <string name="delete_task">Delete Task</string>

    <string-array name="color_filter_options">
        <item>All Colors</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Pink</item>
        <item>Orange</item>
        <item>Beige</item>
    </string-array>

</resources>