<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/meadow_light_bg"
    tools:context=".MainActivity">

<!--    Header          -->
    <TextView
        android:id="@+id/headerText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/app_name"
        android:textColor="@color/main_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    Search Bar - styled with material outlinedbox-->

    <!--    Task List with scrolling enabled    -->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/searchFilterContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@+id/headerText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/searchLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/search"
                app:startIconDrawable="@android:drawable/ic_menu_search"
                app:startIconTint="@color/meadow_accent_dark"
                app:endIconMode="clear_text"
                app:endIconTint="@color/meadow_accent_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/filterButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/main_text"
                    android:textColorHint="@color/meadow_olive" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
                android:id="@+id/filterButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_filter_list"
                android:contentDescription="@string/filter_by_color"
                app:tint="@color/meadow_accent_dark"
                app:layout_constraintStart_toEndOf="@id/searchLayout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/taskRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@id/taskFab"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchFilterContainer">

    </androidx.recyclerview.widget.RecyclerView>

<!--Floating Action Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/taskFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_task"
            android:src="@android:drawable/ic_input_add"
            android:tint="@color/white"
            app:backgroundTint="@color/meadow_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="36dp"/>

    <Button
            android:id="@+id/completedTasksButton"
            android:layout_width="175dp"
            android:layout_height="56dp"
            android:text="@string/view_completed_tasks"
            android:textColor="@color/meadow_accent_dark"
            android:backgroundTint="@color/meadow_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="36dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>