<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/meadow_light_bg"
        tools:context=".CompletedTasksActivity">

    <!--    Header          -->
    <TextView
            android:id="@+id/headerText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/app_name"
            android:textColor="@color/main_text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <!--    Search Bar - styled with material outlinedbox-->

    <!--    Task List with scrolling enabled    -->
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerText"
            app:startIconDrawable="@android:drawable/ic_menu_search"
            app:startIconTint="@color/meadow_accent_dark">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/main_text"
                android:textColorHint="@color/meadow_olive" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/completedRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@id/backToOngoingButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchLayout">
    </androidx.recyclerview.widget.RecyclerView>

    <Button
            android:id="@+id/backToOngoingButton"
            android:layout_width="175dp"
            android:layout_height="56dp"
            android:text="@string/view_ongoing_tasks"
            android:textColor="@color/meadow_accent_dark"
            android:backgroundTint="@color/meadow_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="36dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>


